k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-header-app
  labels:
    app: flask-header-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-header-app
  template:
    metadata:
      labels:
        app: flask-header-app
    spec:
      containers:
      - name: flask-header-app
        image: vishnunair/flask-header-app:latest
        ports:
        - containerPort: 8080
