k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-header-app
spec:
  selector:
    app: flask-header-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
