k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-header-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: flask-header-group
    alb.ingress.kubernetes.io/load-balancer-attributes: |
      routing.http.xff_header_processing.mode=append
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: flask-header-app
                port:
                  number: 80
          - path: /getheader
            pathType: Prefix
            backend:
              service:
                name: flask-header-app
                port:
                  number: 80
